--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iot_vega_notifier_lite",
   "version": "1.0.3",
-  "description": "Iot Vega Notifier application to send notifications to Iot Vega server users.",
+  "description": "IoT Vega Notifier application to send notifications to Iot Vega server users.",
   "author": "Vega-Absolute",
   "main": "index.js",
   "repository": "https://github.com/VegaAbsolute/IotVegaNotifierLite.git",
